Fix overflow issue on right-col content + glass overflow

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ section#main {
     display: grid;
     grid-template: 1fr 9fr  / 1fr;
     align-items: center;
+    width: 33%;
 }
 .right-col h1 {
     text-align: center;
@@ -38,6 +39,9 @@ section#main {
     font-size: 0.8em;
     overflow: hidden;
     max-height: 90vh;
+}
+.middle {
+    min-width: 33%;
 }
 
 .middle-col {
@@ -86,8 +90,8 @@ li {
     box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.123);
     position: fixed;
     top: 50%;
-    min-width: 33%;
-    max-width: 33%;
+    min-width: 27%;
+    max-width: 27%;
     box-sizing: border-box;
     min-height: 3em;
     background-color: transparent;
@@ -95,8 +99,13 @@ li {
 
 
 
-.right-col {
-    width: 33%;
+.right-col * {
+    overflow: hidden;
+}
+
+.content-div {
+    overflow-y: auto;
+    max-height: 90vh;
 }
 
 .titlesectionanim {
